--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
+    "debug": "^4.1.1",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
     "http": "0.0.0",
